Fix: Sync ProductDto with frontend title, restore Producer logic, and fix Search query